# agent-sandboxes

./: .env.example  .gitignore  README.md  TESTING.md  run_tests.sh
.claude/commands/: prime.md  prime_obox.md
apps/cc_in_sandbox/: README.md
apps/cli/: README.md  pyproject.toml
apps/cli/tests/: test_smoke.py
apps/mcp/: README.md  pyproject.toml  server.py
apps/mcp/tests/: test_smoke.py
apps/obox/: README.md  pyproject.toml
apps/obox/src/: main.py
apps/obox/src/commands/: sandbox.py
apps/obox/src/modules/: agents.py  constants.py
apps/obox/tests/: __init__.py  test_smoke.py
lib/: README.md  pyproject.toml
lib/src/: __init__.py  config.py  errors.py  logging.py  sandbox.py  utils.py
runtime/: README.md
working_dir/: .gitignore  .mcp.json.example  README.md
